# ES_utilities

./: CMakeLists.txt  main.cpp
ES/CodingStandards/: Cpp.md
ES/file/: filesize.cpp  filesize.hpp  read.cpp  read.hpp  write.cpp  write.hpp
ES/string/: string2numeric.hpp
Google_test/: CMakeLists.txt
Google_test/ES/file/: write_test.cpp
